# codex-monorepo

./: .gitignore  AGENTS.md  CLONE_GUIDE.md  CODING_GUIDE.md  DOC_TEMPLATES.md  README.md  VERSIONING.md
.github/workflows/: ci.yml
design/infra-inception/: v0.1.0-app-db-stack.md  v0.2.0-nginx-redis-stack.md  v0.3.0-kor-tuning.md  v0.4.0-monitoring-stack.md  v1.0.0-overview.md
design/minishell-cpp17/: v0.1.0-minimal-shell.md  v0.2.0-env-and-builtins.md  v0.3.0-pipelines-and-redirections.md  v0.4.0-signals-and-errors.md  v1.0.0-overview.md
design/philosophers-cpp17/: v0.1.0-naive-deadlock.md  v0.2.0-deadlock-free-strategies.md  v0.3.0-starvation-and-fairness.md  v1.0.0-overview.md
design/webserv-cpp17/: v0.1.0-basic-http-server.md  v0.2.0-multi-connection-loop.md  v0.3.0-http11-core.md  v0.4.0-dynamic-handlers.md  v1.0.0-overview.md
infra-inception/: README.md  docker-compose.yml
infra-inception/services/app/: Dockerfile  main.py
infra-inception/services/db/: init.sql
infra-inception/services/monitoring/: prometheus.yml
infra-inception/services/nginx/: nginx.conf
infra-inception/services/nginx/static/: index.html
infra-inception/tests/: compose_lint.sh
minishell-cpp17/: CMakeLists.txt  README.md
minishell-cpp17/src/: main.cpp
minishell-cpp17/tests/: builtin_cd_env.sh  builtin_exit_status.sh  env_expansion.sh  eof_exit.sh  pipeline_basic.sh  redirection_basic.sh  run_echo.sh  signal_interrupt.sh
philosophers-cpp17/: CMakeLists.txt  README.md
philosophers-cpp17/include/: simulation.hpp
philosophers-cpp17/src/: main.cpp  simulation.cpp
philosophers-cpp17/tests/: deadlock_demo.sh  fairness_metrics.sh  ordered_strategy.sh  usage_help.sh  waiter_strategy.sh
webserv-cpp17/: CMakeLists.txt  README.md
webserv-cpp17/configs/: dev.conf
webserv-cpp17/src/: main.cpp
webserv-cpp17/tests/: test_webserv.sh  test_webserv_dynamic.sh  test_webserv_host_header.sh  test_webserv_keepalive.sh  test_webserv_multi.sh
